# rclone-bin-client

./: .gitignore  README.md  pyproject.toml  setup.py
src/examples/: about.py
src/rclone_api/: api.py
src/rclone_bin_client/: __init__.py  client.py
src/rclone_client/: client.py
src/tests/: test_rclone.py
