
[project]
name = "rclone-bin-client"
description = "Rclone client including the binaries."
version = "1.0.0"
authors = [{ name = "Michael G", email = "me@mgineer85.de" }]
maintainers = [{ name = "Michael G", email = "me@mgineer85.de" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
keywords = ["rclone"]


dependencies = []


[project.urls]
homepage = "https://github.com/mgineer85/rclone-bin-client"
repository = "https://github.com/mgineer85/rclone-bin-client"

[dependency-groups]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "coverage[toml]",
  "pyright",
  "poethepoet",
  "setuptools",
  "wheel",
]


# uv does not yet support [tool.pdm.scripts], so we skip this for now... https://github.com/astral-sh/uv/issues/5903
[tool.poe.tasks]
lint = [
  { cmd = "uv run pyright" },
  { cmd = "uv run ruff check" },
  { cmd = "uv run ruff format --check" },
]
format = [{ cmd = "uv run ruff check --fix" }, { cmd = "uv run ruff format" }]
test = [
  { cmd = "pytest --basetemp=./tests_tmp/ -v ./src/tests --cov-report=term --cov-report=xml:coverage.xml --cov --durations=10" },
]
build = [{ cmd = "uv build wheels" }]


[tool.pyright]
venvPath = "."
venv = ".venv"
ignore = ["./experimental/", "./vendor/"]
typeCheckingMode = "standard"


[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "W",  # pycodestyle
  "F",  # pyflakes
  "B",  # bugbear
  "UP", # pyupgrade
  "I",  # isort
  #"D",   # pydocstyle   # add later
]
ignore = [
  "B008", #used for DI injection
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
# disable couldnt-parse: https://github.com/nedbat/coveragepy/issues/1392
disable_warnings = ["couldnt-parse"]
omit = ["test_*.py", "./tests/*"]
parallel = true
concurrency = ["thread", "multiprocessing"]


[build-system]
requires = ["setuptools", "wheel", "requests"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = { "" = "src/" }
